[Linux/VA-API] libva info log appears in terminal every time a video plays without logging enabled
Categories
(Core :: Audio/Video: Playback, defect, P5)
Tracking
()
People
(Reporter: ke5trel, Assigned: stransky)
References
(Blocks 1 open bug, Regression)
Details
(Keywords: regression)
Attachments
(1 file)
STR:
- Start with
media.ffmpeg.vaapi.enabled = truefrom terminal on Ubuntu 23.04. - Play videos with codec supported by HW decoding.
On startup and every time a video plays, the terminal outputs:
libva info: VA-API version 1.17.0
libva info: Trying to open /usr/lib/x86_64-linux-gnu/dri/r600_drv_video.so
libva info: Found init function __vaDriverInit_1_17
libva info: va_openDriver() returns 0
Regression window:
https://hg.mozilla.org/mozilla-central/pushloghtml?fromchange=add572d6012047244d022436e0b5c578b3dd7cf7&tochange=fb443d9a5f9cfaa17acc81c25473d7093d5cf696
Possibly regressed by Bug 1751987.
Comment 1•2 years ago
|
||
:stransky, since you are the author of the regressor, bug 1751987, could you take a look?
For more information, please visit BugBot documentation.
| Assignee | ||
Comment 2•2 years ago
|
||
That comes from libva which prints that to stdout when the library is initialized. So anytime we open and init the library we see it.
| Assignee | ||
Updated•2 years ago
|
Upstream libva issue:
https://github.com/intel/libva/issues/538
Rejected pull request to change the default verbosity due to Firefox initializing libva for every video causing excessive logging:
https://github.com/intel/libva/pull/564
Workaround is to add the environment variable LIBVA_MESSAGING_LEVEL=1 (0 - silent, 1 - errors, 2 - info (default)).
| Assignee | ||
Comment 4•2 years ago
|
||
We could enable LIBVA_MESSAGING_LEVEL if logging is enabled and disable that otherwise.
Updated•2 years ago
|
Comment 6•2 years ago
|
||
Set release status flags based on info from the regressing bug 1751987
Comment 7•2 years ago
|
||
The severity field is not set for this bug.
:jimm, could you have a look please?
For more information, please visit BugBot documentation.
Updated•2 years ago
|
Updated•2 years ago
|
| Assignee | ||
Updated•2 years ago
|
| Assignee | ||
Updated•2 years ago
|
| Assignee | ||
Comment 8•2 years ago
|
||
Updated•2 years ago
|
| Assignee | ||
Updated•2 years ago
|
Comment 10•2 years ago
|
||
| bugherder | ||
Comment 11•2 years ago
|
||
The patch landed in nightly and beta is affected.
:stransky, is this bug important enough to require an uplift?
- If yes, please nominate the patch for beta approval.
- If no, please set
status-firefox117towontfix.
For more information, please visit BugBot documentation.
Updated•2 years ago
|
Description
•