Bug 1839615 [Linux] Configure libva logging according to platform decoder log r=alwu

Differential Revision: https://phabricator.services.mozilla.com/D184948